// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders the icon variant 1`] = `
<button
  class="flex items-center justify-center outline-none bg-black/10 dark:bg-white/10 hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 size-8 shrink-0 rounded-sm text-neutral-800 dark:text-neutral-200"
  type="button"
>
  icon
</button>
`;

exports[`Button > renders the segmented variant 1`] = `
<button
  class="flex items-center justify-center outline-none bg-black/10 dark:bg-white/10 hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10"
  type="button"
>
  hsl
</button>
`;

exports[`Button > renders the segmented variant in the active state 1`] = `
<button
  class="flex items-center justify-center outline-none hover:bg-black/15 dark:hover:bg-white/15 focus-visible:ring-2 focus:ring-black/30 dark:focus:ring-white/30 h-8 px-3 text-xs leading-none first:rounded-l-sm last:rounded-r-sm text-neutral-900 dark:text-neutral-50 focus-visible:relative focus-visible:z-10 bg-black/20 dark:bg-white/20"
  type="button"
>
  active
</button>
`;
